# antigravity-agent

./: .gitignore  README.md  index.html  package-lock.json  package.json  tailwind.config.js  vite.config.js
.github/ISSUE_TEMPLATE/: bug_report.yml
.github/workflows/: autobuild.yml  plugin-debug.yml  release.yml  tauri-build.yml
.storybook/: preview.tsx
docs/: README.en.md
scripts/: bump-version.mjs
src/: App.tsx  AppToolbar.tsx  AppUserPanel.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: app_settings.rs  config_manager.rs  constants.rs  directories.rs  main.rs  path_utils.rs  state.rs
src-tauri/src/antigravity/: backup.rs  path_config.rs  starter.rs
src-tauri/src/commands/: account_commands.rs  account_metrics_commands.rs  extension_commands.rs  logging_commands.rs  mod.rs  settings_commands.rs
src-tauri/src/server/: middleware.rs  mod.rs
src-tauri/src/system_tray/: manager.rs  menu.rs
src-tauri/src/utils/: log_sanitizer.rs  mod.rs  sanitizing_layer.rs
src/commands/: AccountCommands.ts  AccountMetricsCommands.ts  LoggingCommands.ts  PlatformCommands.ts  SettingsCommands.ts
src/components/: ExportPasswordDialog.tsx  ImportPasswordDialog.tsx  Toolbar.tsx  UpdateBadge.tsx  UpdateDialog.tsx
src/hooks/: use-install-extension.tsx  use-sign-in-new-antigravity-account.ts  use-tray-menu.ts  useUpdateChecker.ts
src/i18n/: config.ts  (+2 more)
vscode-extension/: .vscodeignore  LICENSE  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts  vite.extension.config.ts  vite.webview.config.ts
(+92 files in other folders)
